create board game

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="tabla.js"></script>
     <script src="script.js"></script>
     <script src="p5.min.js"></script>
+    <link rel="stylesheet" href="styleboard.css">
     <title>QuoridorGame</title>
 </head>
 <body>
-    
+    <div id="canvas-container"></div>
 </body>
 </html>
