adaugare input players

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <script src="script.js"></script>
     <script src="p5.min.js"></script>
     <script src="pioni.js"></script>
-    <link rel="stylesheet" href="styleboard.css">
+    <script src="marginboard.js"></script>
     <title>QuoridorGame</title>
 </head>
 <body>
     <div id="canvas-container"></div>
-    <button id="reset-button">ResetGame</button>
+    <input type="button" value="Resetare">
+    <input type="button" value="Jucator 1">
+    <input type="button" value="Jucator 2">
 
 </body>
 </html>
