--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <script src="p5.min.js"></script>
     <script src="pioni.js"></script>
     <script src="marginboard.js"></script>
+    <script src="mousepressed.js"></script>
     <title>QuoridorGame</title>
 </head>
 <body>
     <div id="canvas-container"></div>
-    <input type="button" value="Resetare">
+    <button id="reset-button">Resetare</button>
     <input type="button" value="Jucator 1">
     <input type="button" value="Jucator 2">
 
