--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="canvas-container"></div>
-    <button id="reset-button">Resetare</button>
+    <input type="button" value="Resetare" onclick=" reset()">
     <input type="button" value="Jucator 1">
     <input type="button" value="Jucator 2">
 
