--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <script src="pioni.js"></script>
     <script src="marginboard.js"></script>
     <script src="mousepressed.js"></script>
+    <link rel="stylesheet" href="styleboard.css">
     <title>QuoridorGame</title>
 </head>
 <body>
-    <div id="canvas-container"></div>
+   
     <input type="button" value="Resetare" onclick=" reset()">
     <input type="button" value="Jucator 1">
     <input type="button" value="Jucator 2">
