--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <script src="p5.min.js"></script>
     <script src="pioni.js"></script>
     <script src="mousepressed.js"></script>
+    <script src="jucatori.js"></script>
     <link rel="stylesheet" href="styleboard.css">
     <title>QuoridorGame</title>
 </head>
 <body>
-    <div id="canvas-container"></div>
+    <div id="game-board"></div>
+
     <input type="button" value="Resetare" onclick=" reset()">
+    
     <input type="button" value="Jucator 1">
     <input type="button" value="Jucator 2">
     
