--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>QuoridorGame</title>
 </head>
 <body>
+    <div id="game-board"></div>
     <div id="canvas-container"></div>
     <input type="button" value="Resetare" onclick=" reset()">
     <input type="button" value="Jucator 1">
