Cea mai buna centrare a tablei de joc si a butoanelor

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>QuoridorGame</title>
 </head>
 <body>
+    <div id="game-board"></div>
     <div id="canvas-container"></div>
     <input type="button" value="Resetare" onclick=" reset()">
     
