--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="pioni.js"></script>
     <script src="mousepressed.js"></script>
     <script src="jucatori.js"></script>
+    <script src="walls.js"></script>
     <link rel="stylesheet" href="styleboard.css">
     <title>QuoridorGame</title>
 </head>
@@ -16,9 +17,9 @@
     <div id="game-board"></div>
     <div id="canvas-container"></div>
     <input type="button" value="Resetare" onclick=" reset()">
-    
     <input type="button" value="Jucator 1">
     <input type="button" value="Jucator 2">
+    <input type="button" value="Adaugă Zid" onclick="activateWallPlacement()">
     
 
 </body>
