adaugare logica ziduri

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +21,9 @@
     
     <input type="button" value="Jucator 1">
     <input type="button" value="Jucator 2">
-    <input type="button" value="Adaugă Zid" onclick="activateWallPlacement()">
+    <input type="button" value="Mutare Pion" onclick="activateMoveMode()">
+    <input type="button" value="Adaugă Zid Orizontal" onclick="activateWallPlacement('horizontal')">
+        <input type="button" value="Adaugă Zid Vertical" onclick="activateWallPlacement('vertical')">
     
 
 </body>
